package curso.colecciones.map.ejercicios.basketball_v2_hashmap;

public enum Posicion {

    BASE, ESCOLTA, ALERO, ALA_PIVOT, PIVOT;

}
